--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 body{
-    background: rgb(2,0,36);
+    width: 100%;
+    height: auto;
+    background-color: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(16,16,124,1) 35%, rgba(0,212,255,1) 100%);
 }
